# Test-scan-virus

./: CMakeLists.txt
.github/workflows/: BanVirusPro.cpp  build-banvirus.yml
